--- a/web/loginpage/signup.html
+++ b/web/loginpage/signup.html
@@ -1,73 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Sign Up - Dashboard</title>
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #f3f4f6;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .card {
-      background: white;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-      width: 320px;
-      text-align: center;
-    }
-    input {
-      width: 100%;
-      padding: 0.5rem;
-      margin: 0.5rem 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-    button {
-      width: 100%;
-      padding: 0.5rem;
-      background: #2563eb;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    .msg { margin-top: 1rem; color: #333; }
-  </style>
+  <meta charset="UTF-8">
+  <title>Sign Up</title>
 </head>
 <body>
-  <div class="card">
-    <h2>Sign Up</h2>
-    <form id="signupForm">
-      <input type="text" id="username" placeholder="Roblox Username" required />
-      <button type="submit">Start Verification</button>
-    </form>
-    <div class="msg" id="msg"></div>
-  </div>
+  <h1>Sign Up</h1>
+  <form id="signupForm">
+    <label>Username: <input type="text" name="username" required></label>
+    <button type="submit">Start Signup</button>
+  </form>
+  <p id="message"></p>
 
   <script>
     const form = document.getElementById('signupForm');
-    const msg = document.getElementById('msg');
+    const msg = document.getElementById('message');
 
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
-      const username = document.getElementById('username').value.trim();
-      msg.textContent = 'Sending...';
-      const res = await fetch('/auth/start-signup', {
+      const data = new FormData(form);
+      const username = data.get('username');
+
+      const res = await fetch('/start-signup', {
         method: 'POST',
-        headers: {'Content-Type': 'application/json'},
+        headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ username })
       });
-      const data = await res.json();
+
+      const json = await res.json();
       if (res.ok) {
-        msg.innerHTML = `✅ Code generated. Join the Roblox game and type this code: <strong>${data.code}</strong>`;
+        msg.textContent = `Verification code sent! Check console (or Roblox verification).`;
+        window.location.href = `/verify-code.html?username=${encodeURIComponent(username)}`;
       } else {
-        msg.textContent = data.error || 'Something went wrong.';
+        msg.textContent = json.error;
       }
     });
   </script>
