--- a/web/loginpage/set-password.html
+++ b/web/loginpage/set-password.html
@@ -7,7 +7,6 @@
 <body>
   <h1>Set Password</h1>
   <form id="passwordForm">
-    <input type="hidden" id="username" name="username">
     <label>Password: <input type="password" name="password" required></label>
     <button type="submit">Set Password</button>
   </form>
@@ -18,15 +17,13 @@
     const msg = document.getElementById('message');
 
     const params = new URLSearchParams(window.location.search);
-    document.getElementById('username').value = params.get('username') || '';
+    const username = params.get('username');
 
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
-      const data = new FormData(form);
-      const username = data.get('username');
-      const password = data.get('password');
+      const password = form.password.value;
 
-      const res = await fetch('/set-password', {
+      const res = await fetch('/loginpage/set-password', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ username, password })
@@ -34,8 +31,8 @@
 
       const json = await res.json();
       if (res.ok) {
-        msg.textContent = 'Password set! You can now log in.';
-        window.location.href = '/login.html';
+        msg.textContent = `Password set! You can now log in.`;
+        window.location.href = `/loginpage/login.html`;
       } else {
         msg.textContent = json.error;
       }
