--- a/web/loginpage/set-password.html
+++ b/web/loginpage/set-password.html
@@ -5,36 +5,52 @@
   <title>Set Password</title>
 </head>
 <body>
-  <h1>Set Password</h1>
+  <h1>Set Your Password</h1>
   <form id="passwordForm">
-    <label>Password: <input type="password" name="password" required></label>
+    <label>Username: <input type="text" id="username" name="username" readonly></label><br>
+    <label>Password: <input type="password" id="password" name="password" required></label><br>
     <button type="submit">Set Password</button>
   </form>
+
   <p id="message"></p>
 
   <script>
     const form = document.getElementById('passwordForm');
     const msg = document.getElementById('message');
 
-    const params = new URLSearchParams(window.location.search);
-    const username = params.get('username');
+    // Prefill username from query string
+    const urlParams = new URLSearchParams(window.location.search);
+    const username = urlParams.get('username');
+    if (!username) {
+      msg.textContent = '❌ No username found. Go back to signup.';
+      form.style.display = 'none';
+    } else {
+      document.getElementById('username').value = username;
+    }
 
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
-      const password = form.password.value;
+      const password = document.getElementById('password').value;
 
-      const res = await fetch('/loginpage/set-password', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ username, password })
-      });
+      try {
+        const res = await fetch('/loginpage/set-password', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ username, password })
+        });
 
-      const json = await res.json();
-      if (res.ok) {
-        msg.textContent = `Password set! You can now log in.`;
-        window.location.href = `/loginpage/login.html`;
-      } else {
-        msg.textContent = json.error;
+        const json = await res.json();
+        if (res.ok) {
+          msg.textContent = '✅ Password set successfully! You can now log in.';
+          setTimeout(() => {
+            window.location.href = '/loginpage/login';
+          }, 1500);
+        } else {
+          msg.textContent = `❌ ${json.error}`;
+        }
+      } catch (err) {
+        msg.textContent = '❌ An error occurred. Try again.';
+        console.error(err);
       }
     });
   </script>
