--- a/web/loginpage/signup.html
+++ b/web/loginpage/signup.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Sign Up</h1>
   <form id="signupForm">
-    <label>Username: <input type="text" name="username" required></label>
+    <label>Roblox Username: <input type="text" name="username" required></label>
     <button type="submit">Start Signup</button>
   </form>
   <p id="message"></p>
@@ -16,7 +16,7 @@
     const form = document.getElementById('signupForm');
     const msg = document.getElementById('message');
 
-    form.addEventListener('submit', async (e) => {
+    form.addEventListener('submit', async e => {
       e.preventDefault();
       const data = new FormData(form);
       const username = data.get('username');
@@ -29,8 +29,9 @@
 
       const json = await res.json();
       if (res.ok) {
-        msg.textContent = `Verification code sent! Check console (or Roblox verification).`;
-        window.location.href = `/loginpage/verify-code.html?username=${encodeURIComponent(username)}`;
+        msg.textContent = `✅ Verification code generated. Please add it to your Roblox profile description.`;
+        // Redirect to verify page with username query
+        window.location.href = `/loginpage/verify-code?username=${encodeURIComponent(username)}`;
       } else {
         msg.textContent = json.error;
       }
