--- a/web/loginpage/login.html
+++ b/web/loginpage/login.html
@@ -7,43 +7,36 @@
 <body>
   <h1>Login</h1>
   <form id="loginForm">
-    <label>Username: <input type="text" name="username" required></label><br>
-    <label>Password: <input type="password" name="password" required></label><br>
-    <button type="submit">Log In</button>
+    <label>Username: <input type="text" name="username" required></label>
+    <label>Password: <input type="password" name="password" required></label>
+    <button type="submit">Login</button>
   </form>
-
   <p id="message"></p>
 
   <script>
     const form = document.getElementById('loginForm');
     const msg = document.getElementById('message');
 
-    form.addEventListener('submit', async (e) => {
+    form.addEventListener('submit', async e => {
       e.preventDefault();
       const data = new FormData(form);
       const username = data.get('username');
       const password = data.get('password');
 
-      try {
-        const res = await fetch('/loginpage/login', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ username, password })
-        });
+      const res = await fetch('/loginpage/login', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ username, password })
+      });
 
-        const json = await res.json();
-        if (res.ok) {
-          msg.textContent = `✅ Logged in successfully! Redirecting...`;
-          // Redirect to dashboard after login
-          setTimeout(() => {
-            window.location.href = '/dashboard';
-          }, 1000);
-        } else {
-          msg.textContent = `❌ ${json.error}`;
-        }
-      } catch (err) {
-        msg.textContent = '❌ An error occurred. Try again.';
-        console.error(err);
+      const json = await res.json();
+      if (res.ok) {
+        msg.textContent = '✅ Login successful! Redirecting to dashboard...';
+        setTimeout(() => {
+          window.location.href = `/dashboard`;
+        }, 1000);
+      } else {
+        msg.textContent = json.error;
       }
     });
   </script>
