--- a/web/loginpage/set-password.html
+++ b/web/loginpage/set-password.html
@@ -5,9 +5,9 @@
   <title>Set Password</title>
 </head>
 <body>
-  <h1>Set Your Password</h1>
+  <h1>Set Password</h1>
   <form id="passwordForm">
-    <input type="hidden" id="username">
+    <label>Username: <input type="text" name="username" required></label>
     <label>Password: <input type="password" name="password" required></label>
     <button type="submit">Set Password</button>
   </form>
@@ -16,16 +16,11 @@
   <script>
     const form = document.getElementById('passwordForm');
     const msg = document.getElementById('message');
-    const usernameInput = document.getElementById('username');
 
-    // Get username from query string
-    const params = new URLSearchParams(window.location.search);
-    const username = params.get('username');
-    usernameInput.value = username;
-
-    form.addEventListener('submit', async e => {
+    form.addEventListener('submit', async (e) => {
       e.preventDefault();
       const data = new FormData(form);
+      const username = data.get('username');
       const password = data.get('password');
 
       const res = await fetch('/loginpage/set-password', {
@@ -36,10 +31,8 @@
 
       const json = await res.json();
       if (res.ok) {
-        msg.textContent = '✅ Password set! Redirecting to login...';
-        setTimeout(() => {
-          window.location.href = `/loginpage/login`;
-        }, 1500);
+        msg.textContent = 'Password set! You can now log in.';
+        window.location.href = `/loginpage/login?username=${encodeURIComponent(username)}`;
       } else {
         msg.textContent = json.error;
       }
