--- a/web/loginpage/login.html
+++ b/web/loginpage/login.html
@@ -17,13 +17,9 @@
 
   <script>
     const form = document.getElementById('loginForm');
-    form.addEventListener('submit', async (e) => {
+    form.addEventListener('submit', async e => {
       e.preventDefault();
-
-      const data = {
-        username: form.username.value,
-        password: form.password.value
-      };
+      const data = { username: form.username.value, password: form.password.value };
 
       try {
         const res = await fetch('/loginpage/login', {
@@ -35,13 +31,12 @@
         const msg = document.getElementById('message');
 
         if (result.success) {
-          // ✅ Redirect to dashboard after successful login
           window.location.href = '/dashboard';
         } else {
           msg.style.color = 'red';
           msg.textContent = result.error;
         }
-      } catch (err) {
+      } catch {
         document.getElementById('message').textContent = 'Error connecting to server.';
       }
     });
