--- a/web/loginpage/login.html
+++ b/web/loginpage/login.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Login - Mochi Bar</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="icon" type="image/png" href="https://ibb.co/PZj1fD7b">
 <style>
   * {
     margin: 0;
