--- a/web/public/maintenance.html
+++ b/web/public/maintenance.html
@@ -276,10 +276,10 @@
 <div class="container">
   <div class="header">
     <h1>
-      <span>🏪</span>
-      <span>Mochi Bar System Status</span>
+      <span>⚠️</span>
+      <span>Mochi Bar Systems</span>
     </h1>
-    <p>Real-time status of all systems and services</p>
+    <p>Updates on Mochi Bar System</p>
   </div>
   
   <div class="content" id="mainContent">
