--- a/web/public/maintenance.html
+++ b/web/public/maintenance.html
@@ -276,10 +276,10 @@
 <div class="container">
   <div class="header">
     <h1>
-      <span>⚠️</span>
-      <span>Mochi Bar Systems</span>
+      <span>🏪</span>
+      <span>Mochi Bar System Status</span>
     </h1>
-    <p>Updates on Mochi Bar System</p>
+    <p>Real-time status of all systems and services</p>
   </div>
   
   <div class="content" id="mainContent">
@@ -468,8 +468,8 @@
   // Check status on load
   checkMaintenanceStatus();
   
-  // Auto-refresh every 30 seconds
-  setInterval(checkMaintenanceStatus, 30000);
+  // Auto-refresh every 5 seconds
+  setInterval(checkMaintenanceStatus, 5000);
 </script>
 </body>
 </html>
